added fixed width

--- a/Views/Home/dashboard.cshtml
+++ b/Views/Home/dashboard.cshtml
@@ -27,7 +27,7 @@
 <div class="app app-custom">
 	<div class="container-dashboard">
 		<div class="app__inner" style="width: 100%;">
-			<div class="app__menu">
+			<div class="app__menu" style="width: 300px;">
 				<div id='LineSelect'>
 					<div class="vMenu vMenuTop">
 						<p class="etched-text">Display: <span style="color: darkslategray;">{{ line }}</span></p>
