new stuff again

--- a/Views/Home/dashboard.cshtml
+++ b/Views/Home/dashboard.cshtml
@@ -1093,15 +1093,45 @@
 		}
 		
 		
+		function ylo(){
+					YellowLine.setMap(map);
+		}
+		function pro(){
+						PurpleLine.setMap(map);
 
-		YellowLine.setMap(map);
-		PurpleLine.setMap(map);
-		BrownLine.setMap(map);
-		RedLine.setMap(map);
-		OrangeLine.setMap(map);
-		PinkLine.setMap(map);
-		BlueLine.setMap(map);
-		GreenLine.setMap(map);
+		}
+		function reo(){
+					RedLine.setMap(map);
+
+		}
+		function bro(){
+					BrownLine.setMap(map);
+
+		}
+		function blo(){
+					BlueLine.setMap(map);
+
+		}
+		function gro(){
+					GreenLine.setMap(map);
+
+		}
+		function oro(){
+					OrangeLine.setMap(map);
+
+		}
+		function pio(){
+					PinkLine.setMap(map);
+
+		}
+		ylo();
+		pro();
+		reo();
+		bro();
+		blo();
+		gro();
+		oro();
+		pio();
 	}
 
 
